{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 20,
  "lineage": "d4060557-c79f-b504-4bd0-91038f5a4fac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kirancgwd_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:191080270117:internet-gateway/igw-08d7be6c792417086",
            "id": "igw-08d7be6c792417086",
            "owner_id": "191080270117",
            "region": "ap-south-1",
            "tags": {
              "Name": "kirancgwd-igw"
            },
            "tags_all": {
              "Name": "kirancgwd-igw"
            },
            "vpc_id": "vpc-0e8eb6097abd04d9a"
          },
          "dependencies": [
            "aws_vpc.kirancgwd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kirancgwd_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:191080270117:route-table/rtb-04d99e11011851deb",
            "id": "rtb-04d99e11011851deb",
            "owner_id": "191080270117",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d7be6c792417086",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kirancgwd-route-table"
            },
            "tags_all": {
              "Name": "kirancgwd-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8eb6097abd04d9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kirancgwd_igw",
            "aws_vpc.kirancgwd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07518d9ed4a81720f",
            "region": "ap-south-1",
            "route_table_id": "rtb-04d99e11011851deb",
            "subnet_id": "subnet-0a38856457675f0bf"
          },
          "dependencies": [
            "aws_internet_gateway.kirancgwd_igw",
            "aws_route_table.kirancgwd_route_table",
            "aws_subnet.kirancgwd_subnet",
            "aws_vpc.kirancgwd_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044ce665c5a6e1cf5",
            "region": "ap-south-1",
            "route_table_id": "rtb-04d99e11011851deb",
            "subnet_id": "subnet-0c296659dbdcbe320"
          },
          "dependencies": [
            "aws_internet_gateway.kirancgwd_igw",
            "aws_route_table.kirancgwd_route_table",
            "aws_subnet.kirancgwd_subnet",
            "aws_vpc.kirancgwd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kirancgwd_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:191080270117:security-group/sg-0fcdd83c8cfb2f98d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fcdd83c8cfb2f98d",
            "ingress": [],
            "name": "terraform-20250717153605554200000002",
            "name_prefix": "terraform-",
            "owner_id": "191080270117",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kirancgwd-cluster-sg"
            },
            "tags_all": {
              "Name": "kirancgwd-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8eb6097abd04d9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kirancgwd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kirancgwd_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:191080270117:security-group/sg-04e31ec6d45ccc8a4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e31ec6d45ccc8a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250717153605554200000001",
            "name_prefix": "terraform-",
            "owner_id": "191080270117",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kirancgwd-node-sg"
            },
            "tags_all": {
              "Name": "kirancgwd-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8eb6097abd04d9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kirancgwd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kirancgwd_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:191080270117:subnet/subnet-0a38856457675f0bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a38856457675f0bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "191080270117",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "kirancgwd-subnet-0"
            },
            "tags_all": {
              "Name": "kirancgwd-subnet-0"
            },
            "vpc_id": "vpc-0e8eb6097abd04d9a"
          },
          "dependencies": [
            "aws_vpc.kirancgwd_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:191080270117:subnet/subnet-0c296659dbdcbe320",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c296659dbdcbe320",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "191080270117",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "kirancgwd-subnet-1"
            },
            "tags_all": {
              "Name": "kirancgwd-subnet-1"
            },
            "vpc_id": "vpc-0e8eb6097abd04d9a"
          },
          "dependencies": [
            "aws_vpc.kirancgwd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kirancgwd_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:191080270117:vpc/vpc-0e8eb6097abd04d9a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-035e9859c69589bb9",
            "default_route_table_id": "rtb-0689be512b364a22e",
            "default_security_group_id": "sg-015faedb09e424318",
            "dhcp_options_id": "dopt-05432d9dfd61165e7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e8eb6097abd04d9a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0689be512b364a22e",
            "owner_id": "191080270117",
            "region": "ap-south-1",
            "tags": {
              "Name": "kirancgwd-vpc"
            },
            "tags_all": {
              "Name": "kirancgwd-vpc"
            }
          }
        }
      ]
    }
  ]
}